--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>URL Shorty</title>
   </head>
@@ -11,7 +11,7 @@
   <body>
     <br>
     <div class="container">
-      <img src="shorty.PNG" alt="Happiness">
+      <img src="static/shorty.PNG" style="max-width:100%; heigth:auto;" alt="Happiness">
     </div><br>
 
     <!-- SEARCH BAR -->
